[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[pycodestyle]
max-line-length = 100

[mypy]
# Display
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
color_output = True
error_summary = True

# Meta
warn_unused_configs = True
incremental = False
show_traceback = True

# Mode
strict_optional = True
show_none_errors = True

# Allow
disallow_any_expr = False
disallow_any_explicit = False
disallow_any_decorated = False

# Deny
disallow_any_unimported = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True
allow_untyped_globals = False
allow_redefinition = False
